# UDPT-Appointment-Management

./: .env  README.md  docker-compose.yml  dockerfile  pyproject.toml
config/: database.py  settings.py
src/: main.py
src/controllers/: appointment_controller.py  front_controller.py
src/dto/: __init__.py  appointment_dto.py
src/models/: appointment.py
src/repositories/: appointment_repository.py
src/services/: appointment_service.py  event_publisher.py  user_auth_service.py
tests/: test_main.http
tests/postman/: Quản lý lịch hẹn.postman_collection.json
